// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> MenuLink should render the "about" MenuLink UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuLinkstyles__Container-sc-1da8bov-0 gwazlq"
      >
        <div
          class="menuLinkstyles__Label-sc-1da8bov-1 lneLWJ"
          target="about"
        >
          Contact
        </div>
        <div
          class="locationContentstyles__Content-sc-osxrd6-0 YmcJA"
        >
          <div>
            Meet the captain of the ship.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuLinkstyles__Container-sc-1da8bov-0 gwazlq"
    >
      <div
        class="menuLinkstyles__Label-sc-1da8bov-1 lneLWJ"
        target="about"
      >
        Contact
      </div>
      <div
        class="locationContentstyles__Content-sc-osxrd6-0 YmcJA"
      >
        <div>
          Meet the captain of the ship.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Component -> MenuLink should render the "contact" MenuLink UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuLinkstyles__Container-sc-1da8bov-0 gwazlq"
      >
        <div
          class="menuLinkstyles__Label-sc-1da8bov-1 fsWMbj"
          target="contact"
        >
          Contact
        </div>
        <div
          class="locationContentstyles__Content-sc-osxrd6-0 YmcJA"
        >
          <div>
            For relaxing times, make it Suntory time.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuLinkstyles__Container-sc-1da8bov-0 gwazlq"
    >
      <div
        class="menuLinkstyles__Label-sc-1da8bov-1 fsWMbj"
        target="contact"
      >
        Contact
      </div>
      <div
        class="locationContentstyles__Content-sc-osxrd6-0 YmcJA"
      >
        <div>
          For relaxing times, make it Suntory time.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Component -> MenuLink should render the "work" MenuLink UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuLinkstyles__Container-sc-1da8bov-0 gwazlq"
      >
        <div
          class="menuLinkstyles__Label-sc-1da8bov-1 dPyKiY"
          target="work"
        >
          Contact
        </div>
        <div
          class="locationContentstyles__Content-sc-osxrd6-0 YmcJA"
        >
          <div>
            Some things I've been working on.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuLinkstyles__Container-sc-1da8bov-0 gwazlq"
    >
      <div
        class="menuLinkstyles__Label-sc-1da8bov-1 dPyKiY"
        target="work"
      >
        Contact
      </div>
      <div
        class="locationContentstyles__Content-sc-osxrd6-0 YmcJA"
      >
        <div>
          Some things I've been working on.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
